k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-lab
  labels:
    project: devops-lab
