k8s/base/12-java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-java
  namespace: devops-lab
  labels: { app: tomcat-java, stack: java, role: app-server }
spec:
  replicas: 1
  selector:
    matchLabels: { app: tomcat-java }
  template:
    metadata:
      labels: { app: tomcat-java, stack: java, role: app-server }
    spec:
      containers:
        - name: tomcat-java
          image: devops-lab/tomcat-java:local
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8080 }]
          resources:
            requests: { cpu: "100m", memory: "192Mi" }
            limits:   { cpu: "500m", memory: "384Mi" }
          readinessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-java
  namespace: devops-lab
spec:
  selector: { app: tomcat-java }
  ports:
    - { port: 8080, targetPort: 8080 }
